# student-at-risk-prediction

./: .gitignore  README.md  WRITEUP.md  pyproject.toml
data/: README.md
outputs/: audit_report.md  model_report.md  validation_report.md
src/: audit.py  config.py  data.py  features.py  model.py  run_all.py  viz.py
