[project]
name = "student-at-risk"
version = "0.1.0"
description = "Mid-semester at-risk prediction on the Students Grading dataset (Motiva take-home)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "tabulate>=0.9",
]

[tool.setuptools]
packages = ["src"]
